--- a/src/components/header/components/UserMenu/UserMenu.scss
+++ b/src/components/header/components/UserMenu/UserMenu.scss
@@ -1,5 +1,5 @@
 .user {
-    color:  var(--primary-color-light);
+    color: var(--sidebar-nav-active);
     margin-left: auto;
     line-height: 50px;
     padding: 0 24px;
