--- a/src/containers/Wallets/WalletsUtils/WalletUtils.scss
+++ b/src/containers/Wallets/WalletsUtils/WalletUtils.scss
@@ -3,6 +3,7 @@
 .sumRow {
   color: #fff;
   font-size: 1.25em;
+  background-color: var(--sidebar-background);
 
   td {
     border-top: 1px solid #fff;
