--- a/src/styles/modules/tables.scss
+++ b/src/styles/modules/tables.scss
@@ -4,7 +4,7 @@ table {
   width: 100%;
   text-align: left;
   //border-collapse: collapse;
-  color: #aaa;
+  color: var(--gray-brown);
   margin-bottom: 10px;
 
   tr {
@@ -22,7 +22,7 @@ table {
   }
 
   th {
-    color: #fff
+    color: var(--sidebar-background);
   }
 
 }
