--- a/src/components/header/components/Logo/Logo.scss
+++ b/src/components/header/components/Logo/Logo.scss
@@ -1,6 +1,6 @@
 .moonstreet {
     width: 180px;
-    background-color: var(--primary-color-light);
+    background-color: var(--sidebar-nav-active);
     text-decoration: none;
     font-size: 18px;
     line-height: 50px;
