--- a/src/components/header/components/MenuToggle/MenuToggle.scss
+++ b/src/components/header/components/MenuToggle/MenuToggle.scss
@@ -2,7 +2,7 @@
 
 a[id="menu"] {
     width: 60px;
-    background-color: var(--secondary-color);
+    background-color: var(--sidebar-background);
     text-decoration: none;
     font-size: 18px;
     line-height: 50px;
