--- a/src/containers/Rates/Rates.scss
+++ b/src/containers/Rates/Rates.scss
@@ -4,6 +4,7 @@
   // this thing below should be re-done into better html structure
   width: 50px;
   display: inline-block;
+  font-weight: 700;
 }
 
 .neg {
@@ -11,5 +12,5 @@
 }
 
 .pos {
-  color: #26ff00
+  color: #007931
 }
