refresh button color

--- a/src/styles/layout/sidebar.scss
+++ b/src/styles/layout/sidebar.scss
@@ -52,3 +52,8 @@
 .submenu {
     padding-left: 10px;
 }
+
+.fe-btn-refresh {
+  background-color: var(--sidebar-nav-active);
+  margin-top: 2rem;
+}
