--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -1,6 +1,6 @@
 .header {
     background-color: var(--content-background);
-    border-bottom: 1px solid var(--sidebar-nav-active);
+    border-bottom: 1px solid var(--content-widget-border);
     min-height: 50px;
     display: flex;
 }
