--- a/src/styles/core/vars.scss
+++ b/src/styles/core/vars.scss
@@ -10,9 +10,12 @@
 
   --sidebar-background: #1D1A1F;
   --sidebar-nav-active: #6BA470;
+  --lighter-green: #b9d4bb;
 
   --content-widgets-foreground: #E2E4DB;
   --content-background: #c7c8c4;
+  --content-widget-border: #b7b6b6;
+  --alt-row-color: #d7d8d5;
 
   --gray-brown: #656566;
   --gray-brown-green: #868E75;
