--- a/src/styles/modules/forms.scss
+++ b/src/styles/modules/forms.scss
@@ -14,7 +14,7 @@ label {
 
 .fe {
 	padding: $input-spacing;
-	font-size: 1rem;
+	font-size: 14px;
 	border: 0;
 	color: #333;
 	background-color: #e8e8e8;
@@ -71,7 +71,7 @@ label {
 
 .fe-btn {
 	padding: $rectangle-spacing;
-	font-size: 1rem;
+	font-size: 14px;
 	border: 0px;
 	min-width: 50px;
 	text-align: center;
