--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -204,7 +204,7 @@ table {
 
 a[id="menu"] {
   width: 60px;
-  background-color: var(--sidebar-background);
+  background-color: var(--sidebar-nav-active);
   text-decoration: none;
   font-size: 18px;
   line-height: 50px;
@@ -219,7 +219,11 @@ a[id="menu"] {
   text-decoration: none;
   font-size: 18px;
   line-height: 50px;
-  text-align: center; }
+  text-align: center;
+  display: none; }
+  @media only screen and (min-width: 641px) {
+    .moonstreet {
+      display: block; } }
 
 .user {
   color: var(--sidebar-nav-active);
