--- a/src/components/header/components/UserMenu/UserMenu.scss
+++ b/src/components/header/components/UserMenu/UserMenu.scss
@@ -1,6 +1,20 @@
 .user {
     color: var(--sidebar-nav-active);
     margin-left: auto;
-    line-height: 50px;
-    padding: 0 24px;
+    text-decoration: none;
+    padding: 11px 8px 8px;
+
+    > span {
+      border: 1px solid var(--sidebar-nav-active);
+      padding: 7px 2px;
+      border-radius: 50px;
+      font-size: 12px;
+      width: 2.5em;
+      display: inline-block;
+      text-align: center;
+
+      &:hover {
+        cursor: pointer;
+      }
+    }
 }
