--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -228,8 +228,18 @@ a[id="menu"] {
 .user {
   color: var(--sidebar-nav-active);
   margin-left: auto;
-  line-height: 50px;
-  padding: 0 24px; }
+  text-decoration: none;
+  padding: 11px 8px 8px; }
+  .user > span {
+    border: 1px solid var(--sidebar-nav-active);
+    padding: 7px 2px;
+    border-radius: 50px;
+    font-size: 12px;
+    width: 2.5em;
+    display: inline-block;
+    text-align: center; }
+    .user > span:hover {
+      cursor: pointer; }
 
 .submenu-hidden {
   display: none; }
