--- a/src/styles/core/vars.scss
+++ b/src/styles/core/vars.scss
@@ -11,6 +11,7 @@
   --sidebar-background: #1D1A1F;
   --sidebar-nav-active: #6BA470;
   --lighter-green: #b9d4bb;
+  --sidebar-title-accent: #004661;
 
   --content-widgets-foreground: #E2E4DB;
   --content-background: #c7c8c4;
