--- a/src/components/header/components/Logo/Logo.scss
+++ b/src/components/header/components/Logo/Logo.scss
@@ -6,6 +6,7 @@
     line-height: 49px;
     text-align: center;
     display: none;
+    background-image: linear-gradient(45deg, var(--sidebar-title-accent), var(--sidebar-nav-active));
 
     // remove menu button if it doesn't make sense to show/hide menu
     @include ubreakpoint("large") {
