--- a/src/styles/core/base.scss
+++ b/src/styles/core/base.scss
@@ -11,8 +11,7 @@ html {
 
 body {
     font-family: var(--primary-font-family);
-    background: var(--content-background);
-    color: var(--gray-brown);
+    color: var(--body-color);
     margin: 0;
     padding: 0;
     box-sizing: border-box;
