--- a/src/styles/pages/login.scss
+++ b/src/styles/pages/login.scss
@@ -5,7 +5,7 @@
 }
 
     .login__form {
-        background-color: var(--primary-color-light);
+        background-image: linear-gradient(46deg, var(--sidebar-background-light),var(--sidebar-background-dark));
         padding: 25px;
         margin: auto;
         text-align: center;
