--- a/src/components/header/components/Logo/Logo.scss
+++ b/src/components/header/components/Logo/Logo.scss
@@ -1,12 +1,11 @@
 .moonstreet {
     width: 180px;
-    background-color: var(--sidebar-nav-active);
+    background-color: var(--sidebar-background-dark);
     text-decoration: none;
     font-size: 18px;
     line-height: 49px;
     text-align: center;
     display: none;
-    background-image: linear-gradient(45deg, var(--sidebar-title-accent), var(--sidebar-nav-active));
 
     // remove menu button if it doesn't make sense to show/hide menu
     @include ubreakpoint("large") {
