--- a/src/styles/modules/forms.scss
+++ b/src/styles/modules/forms.scss
@@ -1,7 +1,11 @@
+@import '../core/vars.scss';
+
 input,
 select,
-textarea {
+textarea,
+button {
     margin-bottom: 5px;
+    font-family: var(--primary-font-family);
 }
 
 
@@ -19,12 +23,8 @@ label {
 	font-size: 14px;
 	border: 0;
 	color: #333;
-	background-color: #e8e8e8;
 	transition: all $transition-duration;
-
-	&:hover {
-		border-color: rgba(32,32,32,.8);
-	}
+  border: 1px solid var(--content-widget-border);
 
 	&:focus {
 		color: #555;
@@ -77,18 +77,20 @@ label {
 	border: 0px;
 	min-width: 50px;
 	text-align: center;
-	color: #fff;
-	background-color: rgba(32,32,32,1);
 	transition: background-color $transition-duration;
+  background-color: var(--sidebar-background-light);
+  border: 1px solid var(--sidebar-background-light);
+  color: var(--light-gray);
 
 	&.fe--anch {
 		display: inline-block;
 		text-decoration: none;
 	}
 
-
 	&:hover {
-		background-color: rgba(32,32,32,.8);
+		background-color: var(--sidebar-background-dark);
+    border: 1px solid var(--sidebar-background-dark);
+    color: var(--light-gray);
 		text-decoration: none;
 	}
 
