--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,25 +1,22 @@
 /* vars */
 :root {
   /* colors */
-  --primary-color: #22373a;
-  --primary-color-light: #00a8ba;
-  --secondary-color: #fd9c2a;
+  --body-color: #40697d;
+  --body-color-alt: #000000;
   --layout-boder: #464646;
   --header-background: #fff;
-  --sidebar-background: #1D1A1F;
-  --sidebar-nav-active: #6BA470;
-  --lighter-green: #b9d4bb;
+  --sidebar-background-dark: #05003a;
+  --sidebar-background-light: #008398;
+  --sidebar-nav-active: #74efd2;
+  --light-gray: #ecefed;
+  --very-light-gray: #f7f7f7;
   --sidebar-title-accent: #004661;
-  --content-widgets-foreground: #E2E4DB;
   --content-background: #c7c8c4;
-  --content-widget-border: #b7b6b6;
-  --alt-row-color: #d7d8d5;
-  --gray-brown: #656566;
-  --gray-brown-green: #868E75;
+  --content-widget-border: #dedede;
   /* typography */
   --primary-font-color: #fff;
   --secondary-font-color: #94A0A2;
-  --primary-font-family: sans-serif; }
+  --primary-font-family: monospace; }
 
 /* roughtly estimating width on optimal number of characters per line */
 * {
@@ -33,8 +30,7 @@ html {
 
 body {
   font-family: var(--primary-font-family);
-  background: var(--content-background);
-  color: var(--gray-brown);
+  color: var(--body-color);
   margin: 0;
   padding: 0;
   box-sizing: border-box; }
@@ -58,10 +54,33 @@ a {
 .tLeft {
   text-align: left; }
 
+/* vars */
+:root {
+  /* colors */
+  --body-color: #40697d;
+  --body-color-alt: #000000;
+  --layout-boder: #464646;
+  --header-background: #fff;
+  --sidebar-background-dark: #05003a;
+  --sidebar-background-light: #008398;
+  --sidebar-nav-active: #74efd2;
+  --light-gray: #ecefed;
+  --very-light-gray: #f7f7f7;
+  --sidebar-title-accent: #004661;
+  --content-background: #c7c8c4;
+  --content-widget-border: #dedede;
+  /* typography */
+  --primary-font-color: #fff;
+  --secondary-font-color: #94A0A2;
+  --primary-font-family: monospace; }
+
+/* roughtly estimating width on optimal number of characters per line */
 input,
 select,
-textarea {
-  margin-bottom: 5px; }
+textarea,
+button {
+  margin-bottom: 5px;
+  font-family: var(--primary-font-family); }
 
 label {
   min-width: 120px;
@@ -72,10 +91,8 @@ label {
   font-size: 14px;
   border: 0;
   color: #333;
-  background-color: #e8e8e8;
-  transition: all 0.2s; }
-  .fe:hover {
-    border-color: rgba(32, 32, 32, 0.8); }
+  transition: all 0.2s;
+  border: 1px solid var(--content-widget-border); }
   .fe:focus {
     color: #555; }
   .fe.fe--err {
@@ -114,14 +131,17 @@ label {
   border: 0px;
   min-width: 50px;
   text-align: center;
-  color: #fff;
-  background-color: #202020;
-  transition: background-color 0.2s; }
+  transition: background-color 0.2s;
+  background-color: var(--sidebar-background-light);
+  border: 1px solid var(--sidebar-background-light);
+  color: var(--light-gray); }
   .fe-btn.fe--anch {
     display: inline-block;
     text-decoration: none; }
   .fe-btn:hover {
-    background-color: rgba(32, 32, 32, 0.8);
+    background-color: var(--sidebar-background-dark);
+    border: 1px solid var(--sidebar-background-dark);
+    color: var(--light-gray);
     text-decoration: none; }
   .fe-btn.disabled, .fe-btn[disabled] {
     cursor: default;
@@ -174,9 +194,7 @@ label {
 table {
   width: 100%;
   text-align: left;
-  color: var(--gray-brown);
   margin-bottom: 10px;
-  background-color: var(--content-widgets-foreground);
   border-collapse: collapse;
   border: 1px solid var(--content-widget-border);
   font-size: 14px; }
@@ -185,21 +203,17 @@ table {
     padding: 5px 10px; }
   table th {
     font-weight: 400;
-    background-color: var(--sidebar-background);
-    color: var(--sidebar-nav-active); }
+    background-color: var(--light-gray);
+    color: var(--sidebar-background-light); }
   table tr.sumRow {
-    background-color: var(--lighter-green);
-    color: var(--sidebar-background); }
+    background-color: var(--light-gray);
+    color: var(--body-color-alt); }
   table tr:nth-child(2n) td, table tr:nth-child(2n) th {
-    background-color: var(--alt-row-color); }
-  table.trades tr:nth-child(2n) td, table.trades th {
-    background-color: var(--content-widgets-foreground); }
+    background-color: var(--very-light-gray); }
   table.trades tbody:nth-child(2n) td, table.trades tbody:nth-child(2n) th {
-    background-color: var(--alt-row-color); }
+    background-color: var(--very-light-gray); }
 
 .header {
-  background-color: var(--content-background);
-  border-bottom: 1px solid var(--content-widget-border);
   min-height: 50px;
   display: flex; }
 
@@ -217,13 +231,12 @@ a[id="menu"] {
 
 .moonstreet {
   width: 180px;
-  background-color: var(--sidebar-nav-active);
+  background-color: var(--sidebar-background-dark);
   text-decoration: none;
   font-size: 18px;
   line-height: 49px;
   text-align: center;
-  display: none;
-  background-image: linear-gradient(45deg, var(--sidebar-title-accent), var(--sidebar-nav-active)); }
+  display: none; }
   @media only screen and (min-width: 641px) {
     .moonstreet {
       display: block; } }
@@ -265,8 +278,8 @@ a[id="menu"] {
 
 /* Styles for feature component */
 .sidebar {
-  border-right: 1px solid var(--layout-boder);
-  background-color: var(--sidebar-background);
+  background-color: var(--sidebar-background-dark);
+  background-image: linear-gradient(46deg, var(--sidebar-background-light), var(--sidebar-background-dark));
   min-height: 100%;
   width: 180px;
   margin-left: -180px;
@@ -309,7 +322,6 @@ a[id="menu"] {
   padding-left: 10px; }
 
 .fe-btn-refresh {
-  background-color: var(--sidebar-nav-active);
   margin-top: 2rem; }
 
 .dashboard {
@@ -322,7 +334,7 @@ a[id="menu"] {
   height: 100%; }
 
 .login__form {
-  background-color: var(--primary-color-light);
+  background-image: linear-gradient(46deg, var(--sidebar-background-light), var(--sidebar-background-dark));
   padding: 25px;
   margin: auto;
   text-align: center; }
